opam-version: "1.2"
name: "spacetime_lib"
version: "0.2.0+dev"
maintainer: "Leo White <leo@lpw25.net>"
authors: ["Leo White <leo@lpw25.net>" "Mark Shinwell <mshinwell@janestreet.com>"]
homepage: "https://github.com/lpw25/spacetime_lib"
bug-reports: "https://github.com/lpw25/spacetime_lib"
license: "MIT"
dev-repo: "git://github.com/lpw25/spacetime_lib"
build: [
  ["./configure.sh"]
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
  "ocamlfind" {build}
  "owee"
  "raw_spacetime"
  "base-bigarray"
  "base-unix"
]
